deploy: 4bed3ed90a62b9f351e018b4e750b2b2f09ba3dc

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ transform
 transition
 duration-500
 hover:scale-105">
-<img src=https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2019/canary_islands/Kanaren-21.jpg class=w-full alt="image from 2019: Canary Islands">
+<img src=https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2019/canary_islands/Kanaren-21.jpg class="img w-full" alt="image from 2019: Canary Islands">
 <div class="absolute flex flex-col inset-0 items-center justify-center">
 <h3>
 <a href=# class="text-white text-2xl">
@@ -73,7 +73,7 @@ transform
 transition
 duration-500
 hover:scale-105">
-<img src=https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2018/dubai/Dubai-017.jpg class=w-full alt="image from 2018: Dubai">
+<img src=https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2018/dubai/Dubai-017.jpg class="img w-full" alt="image from 2018: Dubai">
 <div class="absolute flex flex-col inset-0 items-center justify-center">
 <h3>
 <a href=# class="text-white text-2xl">
@@ -95,7 +95,7 @@ transform
 transition
 duration-500
 hover:scale-105">
-<img src=https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2018/ireland/Irland-048.jpg class=w-full alt="image from 2018: Ireland">
+<img src=https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2018/ireland/Irland-048.jpg class="img w-full" alt="image from 2018: Ireland">
 <div class="absolute flex flex-col inset-0 items-center justify-center">
 <h3>
 <a href=# class="text-white text-2xl">
@@ -117,7 +117,7 @@ transform
 transition
 duration-500
 hover:scale-105">
-<img src=https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2018/japan/Japan-132.jpg class=w-full alt="image from 2018: Japan">
+<img src=https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2018/japan/Japan-132.jpg class="img w-full" alt="image from 2018: Japan">
 <div class="absolute flex flex-col inset-0 items-center justify-center">
 <h3>
 <a href=# class="text-white text-2xl">
@@ -139,7 +139,7 @@ transform
 transition
 duration-500
 hover:scale-105">
-<img src=https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2017/sweden/Schweden-079.jpg class=w-full alt="image from 2017: Sweden">
+<img src=https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2017/sweden/Schweden-079.jpg class="img w-full" alt="image from 2017: Sweden">
 <div class="absolute flex flex-col inset-0 items-center justify-center">
 <h3>
 <a href=# class="text-white text-2xl">
@@ -161,7 +161,7 @@ transform
 transition
 duration-500
 hover:scale-105">
-<img src=https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2016/iceland/Island-116.jpg class=w-full alt="image from 2016: Iceland">
+<img src=https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2016/iceland/Island-116.jpg class="img w-full" alt="image from 2016: Iceland">
 <div class="absolute flex flex-col inset-0 items-center justify-center">
 <h3>
 <a href=# class="text-white text-2xl">
@@ -183,7 +183,7 @@ transform
 transition
 duration-500
 hover:scale-105">
-<img src=https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2016/guatemala-belize-mexico/Urlaub2016-059.jpg class=w-full alt="image from 2016: Guatemala, Belice, Mexico">
+<img src=https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2016/guatemala-belize-mexico/Urlaub2016-059.jpg class="img w-full" alt="image from 2016: Guatemala, Belice, Mexico">
 <div class="absolute flex flex-col inset-0 items-center justify-center">
 <h3>
 <a href=# class="text-white text-2xl">
@@ -205,7 +205,7 @@ transform
 transition
 duration-500
 hover:scale-105">
-<img src=https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2016/cuba/Urlaub2016-326.jpg class=w-full alt="image from 2016: Cuba">
+<img src=https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2016/cuba/Urlaub2016-326.jpg class="img w-full" alt="image from 2016: Cuba">
 <div class="absolute flex flex-col inset-0 items-center justify-center">
 <h3>
 <a href=# class="text-white text-2xl">
@@ -227,7 +227,7 @@ transform
 transition
 duration-500
 hover:scale-105">
-<img src=https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2014/new-zealand/DSC_1044.jpg class=w-full alt="image from 2014: New Zealand">
+<img src=https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2014/new-zealand/DSC_1044.jpg class="img w-full" alt="image from 2014: New Zealand">
 <div class="absolute flex flex-col inset-0 items-center justify-center">
 <h3>
 <a href=# class="text-white text-2xl">
@@ -249,7 +249,7 @@ transform
 transition
 duration-500
 hover:scale-105">
-<img src=https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2013/australia/Poster009.jpg class=w-full alt="image from 2013: Australia">
+<img src=https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2013/australia/Poster009.jpg class="img w-full" alt="image from 2013: Australia">
 <div class="absolute flex flex-col inset-0 items-center justify-center">
 <h3>
 <a href=# class="text-white text-2xl">
