deploy: 0407a2799cadece1cbbf287e17360b8d9535ac8f

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta name=viewport content="width=device-width,initial-scale=1">
 <title>Travel broadens the mind. - Olli On Tour</title>
 <meta name=description content="Test description">
-<meta name=generator content="Hugo 0.88.1"><link rel=stylesheet href="https://occb.dev/css/styles.min.d218c74189c6ffa7835501d81ad6dabcdde8e853635bae9120f5e33b03e76b55.css" integrity="sha256-0hjHQYnG/6eDVQHYGtbavN3o6FNjW66RIPXjOwPna1U=">
+<meta name=generator content="Hugo 0.88.1"><link rel=stylesheet href="https://occb.dev/css/styles.min.285fd90247685e8b39a5597871f8fa9ffa6024525d958a78762dac9ec60a7f15.css" integrity="sha256-KF/ZAkdoXos5pVl4cfj6n/pgJFJdlYp4di2snsYKfxU=">
 <link rel=apple-touch-icon sizes=76x76 href=/favicon/apple-touch-icon.png>
 <link rel=icon type=image/png sizes=32x32 href=/favicon/favicon-32x32.png>
 <link rel=icon type=image/png sizes=16x16 href=/favicon/favicon-16x16.png>
@@ -52,9 +52,9 @@ transition
 duration-500
 hover:scale-105">
 <img src=https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2019/canary_islands/Kanaren-21.jpg class="img w-full" alt="image from 2019: Canary Islands">
-<div class="absolute flex flex-col inset-0 items-center justify-center">
+<div class="absolute flex flex-col inset-0 items-center justify-center bg-black bg-opacity-25">
 <h3>
-<a href=# class="text-white text-2xl">
+<a href=# class="text-white text-3xl">
 2019: Canary Islands
 </a>
 </h3>
@@ -74,9 +74,9 @@ transition
 duration-500
 hover:scale-105">
 <img src=https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2018/dubai/Dubai-017.jpg class="img w-full" alt="image from 2018: Dubai">
-<div class="absolute flex flex-col inset-0 items-center justify-center">
+<div class="absolute flex flex-col inset-0 items-center justify-center bg-black bg-opacity-25">
 <h3>
-<a href=# class="text-white text-2xl">
+<a href=# class="text-white text-3xl">
 2018: Dubai
 </a>
 </h3>
@@ -96,9 +96,9 @@ transition
 duration-500
 hover:scale-105">
 <img src=https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2018/ireland/Irland-048.jpg class="img w-full" alt="image from 2018: Ireland">
-<div class="absolute flex flex-col inset-0 items-center justify-center">
+<div class="absolute flex flex-col inset-0 items-center justify-center bg-black bg-opacity-25">
 <h3>
-<a href=# class="text-white text-2xl">
+<a href=# class="text-white text-3xl">
 2018: Ireland
 </a>
 </h3>
@@ -118,9 +118,9 @@ transition
 duration-500
 hover:scale-105">
 <img src=https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2018/japan/Japan-132.jpg class="img w-full" alt="image from 2018: Japan">
-<div class="absolute flex flex-col inset-0 items-center justify-center">
+<div class="absolute flex flex-col inset-0 items-center justify-center bg-black bg-opacity-25">
 <h3>
-<a href=# class="text-white text-2xl">
+<a href=# class="text-white text-3xl">
 2018: Japan
 </a>
 </h3>
@@ -140,9 +140,9 @@ transition
 duration-500
 hover:scale-105">
 <img src=https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2017/sweden/Schweden-079.jpg class="img w-full" alt="image from 2017: Sweden">
-<div class="absolute flex flex-col inset-0 items-center justify-center">
+<div class="absolute flex flex-col inset-0 items-center justify-center bg-black bg-opacity-25">
 <h3>
-<a href=# class="text-white text-2xl">
+<a href=# class="text-white text-3xl">
 2017: Sweden
 </a>
 </h3>
@@ -162,9 +162,9 @@ transition
 duration-500
 hover:scale-105">
 <img src=https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2016/iceland/Island-116.jpg class="img w-full" alt="image from 2016: Iceland">
-<div class="absolute flex flex-col inset-0 items-center justify-center">
+<div class="absolute flex flex-col inset-0 items-center justify-center bg-black bg-opacity-25">
 <h3>
-<a href=# class="text-white text-2xl">
+<a href=# class="text-white text-3xl">
 2016: Iceland
 </a>
 </h3>
@@ -184,9 +184,9 @@ transition
 duration-500
 hover:scale-105">
 <img src=https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2016/guatemala-belize-mexico/Urlaub2016-059.jpg class="img w-full" alt="image from 2016: Guatemala, Belice, Mexico">
-<div class="absolute flex flex-col inset-0 items-center justify-center">
+<div class="absolute flex flex-col inset-0 items-center justify-center bg-black bg-opacity-25">
 <h3>
-<a href=# class="text-white text-2xl">
+<a href=# class="text-white text-3xl">
 2016: Guatemala, Belice, Mexico
 </a>
 </h3>
@@ -206,9 +206,9 @@ transition
 duration-500
 hover:scale-105">
 <img src=https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2016/cuba/Urlaub2016-326.jpg class="img w-full" alt="image from 2016: Cuba">
-<div class="absolute flex flex-col inset-0 items-center justify-center">
+<div class="absolute flex flex-col inset-0 items-center justify-center bg-black bg-opacity-25">
 <h3>
-<a href=# class="text-white text-2xl">
+<a href=# class="text-white text-3xl">
 2016: Cuba
 </a>
 </h3>
@@ -228,9 +228,9 @@ transition
 duration-500
 hover:scale-105">
 <img src=https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2014/new-zealand/DSC_1044.jpg class="img w-full" alt="image from 2014: New Zealand">
-<div class="absolute flex flex-col inset-0 items-center justify-center">
+<div class="absolute flex flex-col inset-0 items-center justify-center bg-black bg-opacity-25">
 <h3>
-<a href=# class="text-white text-2xl">
+<a href=# class="text-white text-3xl">
 2014: New Zealand
 </a>
 </h3>
@@ -250,9 +250,9 @@ transition
 duration-500
 hover:scale-105">
 <img src=https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2013/australia/Poster009.jpg class="img w-full" alt="image from 2013: Australia">
-<div class="absolute flex flex-col inset-0 items-center justify-center">
+<div class="absolute flex flex-col inset-0 items-center justify-center bg-black bg-opacity-25">
 <h3>
-<a href=# class="text-white text-2xl">
+<a href=# class="text-white text-3xl">
 2013: Australia
 </a>
 </h3>
