--- a/about/index.html
+++ b/about/index.html
@@ -48,6 +48,8 @@ Olli On Tour
 <p xmlns:cc=http://creativecommons.org/ns# xmlns:dct=http://purl.org/dc/terms/><a property="dct:title" rel=cc:attributionurl href=https://www.occb.dev/>All Photos on this site</a> (except mentioned avatar picture) by <a rel="cc:attributionurl dct:creator" property="cc:attributionName" href=https://www.occb.dev/>Oliver Becker</a> are licensed under <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1" target=_blank rel="license noopener noreferrer" style=display:inline-block>CC BY-NC-SA 4.0<img style=height:22px!important;margin-left:3px;vertical-align:text-bottom src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img style=height:22px!important;margin-left:3px;vertical-align:text-bottom src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"><img style=height:22px!important;margin-left:3px;vertical-align:text-bottom src="https://mirrors.creativecommons.org/presskit/icons/nc.svg?ref=chooser-v1"><img style=height:22px!important;margin-left:3px;vertical-align:text-bottom src="https://mirrors.creativecommons.org/presskit/icons/sa.svg?ref=chooser-v1"></a></p>
 </article>
 </main><footer class="bottom-0 w-full p-4 text-xs text-center text-gray-400 border-t border-gray-200">
-<p>made with <a href=https://gohugo.io class="underline hover:text-blue-400">Hugo</a> and <a href=https://tailwindcss.com class="underline hover:text-blue-400">TailwindCSS</a></p>
+<p>2020-2021
+<a href=https://occb.dev/>Olli On Tour</a> &copy;
+made with <a href=https://gohugo.io class="underline hover:text-blue-400">Hugo</a> and <a href=https://tailwindcss.com class="underline hover:text-blue-400">TailwindCSS</a></p>
 </footer></body>
 </html>
