--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta name=viewport content="width=device-width,initial-scale=1">
 <title>Travel broadens the mind. - Olli On Tour</title>
 <meta name=description content="Test description">
-<meta name=generator content="Hugo 0.88.1"><link rel=stylesheet href="https://occb.dev/css/styles.min.285fd90247685e8b39a5597871f8fa9ffa6024525d958a78762dac9ec60a7f15.css" integrity="sha256-KF/ZAkdoXos5pVl4cfj6n/pgJFJdlYp4di2snsYKfxU=">
+<meta name=generator content="Hugo 0.88.1"><link rel=stylesheet href="https://occb.dev/css/styles.min.d7ebd1810ff3fd4c8c9bc2e6c8a3c837b6d18cbf76c401b63aeb398da637f803.css" integrity="sha256-1+vRgQ/z/UyMm8LmyKPIN7bRjL92xAG2Ous5jaY3+AM=">
 <link rel=apple-touch-icon sizes=76x76 href=/favicon/apple-touch-icon.png>
 <link rel=icon type=image/png sizes=32x32 href=/favicon/favicon-32x32.png>
 <link rel=icon type=image/png sizes=16x16 href=/favicon/favicon-16x16.png>
@@ -37,7 +37,7 @@ Olli On Tour
 </nav>
 </header><main class="flex-1 mx-4 md:mx-12 lg:mx-24 mt-4 sm:mt-16">
 <article class="text-center text-gray-700">
-<h2 class="font-serif font-extralight text-5xl text-gray-500">Travel broadens the mind.</h2>
+<h2 class="font-serif font-extralight text-5xl text-gray-500 mb-8">Travel broadens the mind.</h2>
 </article>
 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 lg:grid-cols-4 gap-4">
 <div>
