--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta name=viewport content="width=device-width,initial-scale=1">
 <title>Travel broadens the mind. - Olli On Tour</title>
 <meta name=description content="Test description">
-<meta name=generator content="Hugo 0.88.1"><link rel=stylesheet href="https://occb.dev/css/styles.min.d7ebd1810ff3fd4c8c9bc2e6c8a3c837b6d18cbf76c401b63aeb398da637f803.css" integrity="sha256-1+vRgQ/z/UyMm8LmyKPIN7bRjL92xAG2Ous5jaY3+AM=">
+<meta name=generator content="Hugo 0.88.1"><link rel=stylesheet href="https://occb.dev/css/styles.min.1c7a80b3676fc0273e92c3d44dfa71f55979a62a072fec0bd9367afee51677fb.css" integrity="sha256-HHqAs2dvwCc+ksPUTfpx9Vl5pioHL+wL2TZ6/uUWd/s=">
 <link rel=apple-touch-icon sizes=76x76 href=/favicon/apple-touch-icon.png>
 <link rel=icon type=image/png sizes=32x32 href=/favicon/favicon-32x32.png>
 <link rel=icon type=image/png sizes=16x16 href=/favicon/favicon-16x16.png>
@@ -39,226 +39,166 @@ Olli On Tour
 <article class="text-center text-gray-700">
 <h2 class="font-serif font-extralight text-5xl text-gray-500 mb-8">Travel broadens the mind.</h2>
 </article>
-<div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 lg:grid-cols-4 gap-4">
+<div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
 <div>
-<article>
-<div class="relative
-overflow-hidden
-img
-h-full
-w-full
-transform
-transition
-duration-500
-hover:scale-105">
-<img src=https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2019/canary_islands/Kanaren-21.jpg class="img w-full" alt="image from 2019: Canary Islands">
-<div class="absolute flex flex-col inset-0 items-center justify-center bg-black bg-opacity-25">
-<h3>
-<a href=# class="text-white text-3xl">
+<a href=# class="block relative overflow-hidden">
+<img src=https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2019/canary_islands/Kanaren-21.jpg class="w-full h-full transform transition duration-500 hover:scale-105" alt="image from 2019: Canary Islands">
+<div class="absolute
+flex flex-col
+inset-0
+items-center
+justify-center
+bg-black bg-opacity-25
+pointer-events-none">
+<h3 class="text-white text-3xl p-5 text-center">
 2019: Canary Islands
-</a>
 </h3>
 </div>
-</div>
-</article>
+</a>
 </div>
 <div>
-<article>
-<div class="relative
-overflow-hidden
-img
-h-full
-w-full
-transform
-transition
-duration-500
-hover:scale-105">
-<img src=https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2018/dubai/Dubai-017.jpg class="img w-full" alt="image from 2018: Dubai">
-<div class="absolute flex flex-col inset-0 items-center justify-center bg-black bg-opacity-25">
-<h3>
-<a href=# class="text-white text-3xl">
+<a href=# class="block relative overflow-hidden">
+<img src=https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2018/dubai/Dubai-017.jpg class="w-full h-full transform transition duration-500 hover:scale-105" alt="image from 2018: Dubai">
+<div class="absolute
+flex flex-col
+inset-0
+items-center
+justify-center
+bg-black bg-opacity-25
+pointer-events-none">
+<h3 class="text-white text-3xl p-5 text-center">
 2018: Dubai
-</a>
 </h3>
 </div>
-</div>
-</article>
+</a>
 </div>
 <div>
-<article>
-<div class="relative
-overflow-hidden
-img
-h-full
-w-full
-transform
-transition
-duration-500
-hover:scale-105">
-<img src=https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2018/ireland/Irland-048.jpg class="img w-full" alt="image from 2018: Ireland">
-<div class="absolute flex flex-col inset-0 items-center justify-center bg-black bg-opacity-25">
-<h3>
-<a href=# class="text-white text-3xl">
+<a href=# class="block relative overflow-hidden">
+<img src=https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2018/ireland/Irland-048.jpg class="w-full h-full transform transition duration-500 hover:scale-105" alt="image from 2018: Ireland">
+<div class="absolute
+flex flex-col
+inset-0
+items-center
+justify-center
+bg-black bg-opacity-25
+pointer-events-none">
+<h3 class="text-white text-3xl p-5 text-center">
 2018: Ireland
-</a>
 </h3>
 </div>
-</div>
-</article>
+</a>
 </div>
 <div>
-<article>
-<div class="relative
-overflow-hidden
-img
-h-full
-w-full
-transform
-transition
-duration-500
-hover:scale-105">
-<img src=https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2018/japan/Japan-132.jpg class="img w-full" alt="image from 2018: Japan">
-<div class="absolute flex flex-col inset-0 items-center justify-center bg-black bg-opacity-25">
-<h3>
-<a href=# class="text-white text-3xl">
+<a href=# class="block relative overflow-hidden">
+<img src=https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2018/japan/Japan-132.jpg class="w-full h-full transform transition duration-500 hover:scale-105" alt="image from 2018: Japan">
+<div class="absolute
+flex flex-col
+inset-0
+items-center
+justify-center
+bg-black bg-opacity-25
+pointer-events-none">
+<h3 class="text-white text-3xl p-5 text-center">
 2018: Japan
-</a>
 </h3>
 </div>
-</div>
-</article>
+</a>
 </div>
 <div>
-<article>
-<div class="relative
-overflow-hidden
-img
-h-full
-w-full
-transform
-transition
-duration-500
-hover:scale-105">
-<img src=https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2017/sweden/Schweden-079.jpg class="img w-full" alt="image from 2017: Sweden">
-<div class="absolute flex flex-col inset-0 items-center justify-center bg-black bg-opacity-25">
-<h3>
-<a href=# class="text-white text-3xl">
+<a href=# class="block relative overflow-hidden">
+<img src=https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2017/sweden/Schweden-079.jpg class="w-full h-full transform transition duration-500 hover:scale-105" alt="image from 2017: Sweden">
+<div class="absolute
+flex flex-col
+inset-0
+items-center
+justify-center
+bg-black bg-opacity-25
+pointer-events-none">
+<h3 class="text-white text-3xl p-5 text-center">
 2017: Sweden
-</a>
 </h3>
 </div>
-</div>
-</article>
+</a>
 </div>
 <div>
-<article>
-<div class="relative
-overflow-hidden
-img
-h-full
-w-full
-transform
-transition
-duration-500
-hover:scale-105">
-<img src=https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2016/iceland/Island-116.jpg class="img w-full" alt="image from 2016: Iceland">
-<div class="absolute flex flex-col inset-0 items-center justify-center bg-black bg-opacity-25">
-<h3>
-<a href=# class="text-white text-3xl">
+<a href=# class="block relative overflow-hidden">
+<img src=https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2016/iceland/Island-116.jpg class="w-full h-full transform transition duration-500 hover:scale-105" alt="image from 2016: Iceland">
+<div class="absolute
+flex flex-col
+inset-0
+items-center
+justify-center
+bg-black bg-opacity-25
+pointer-events-none">
+<h3 class="text-white text-3xl p-5 text-center">
 2016: Iceland
-</a>
 </h3>
 </div>
-</div>
-</article>
+</a>
 </div>
 <div>
-<article>
-<div class="relative
-overflow-hidden
-img
-h-full
-w-full
-transform
-transition
-duration-500
-hover:scale-105">
-<img src=https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2016/guatemala-belize-mexico/Urlaub2016-059.jpg class="img w-full" alt="image from 2016: Guatemala, Belice, Mexico">
-<div class="absolute flex flex-col inset-0 items-center justify-center bg-black bg-opacity-25">
-<h3>
-<a href=# class="text-white text-3xl">
+<a href=# class="block relative overflow-hidden">
+<img src=https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2016/guatemala-belize-mexico/Urlaub2016-059.jpg class="w-full h-full transform transition duration-500 hover:scale-105" alt="image from 2016: Guatemala, Belice, Mexico">
+<div class="absolute
+flex flex-col
+inset-0
+items-center
+justify-center
+bg-black bg-opacity-25
+pointer-events-none">
+<h3 class="text-white text-3xl p-5 text-center">
 2016: Guatemala, Belice, Mexico
-</a>
 </h3>
 </div>
-</div>
-</article>
+</a>
 </div>
 <div>
-<article>
-<div class="relative
-overflow-hidden
-img
-h-full
-w-full
-transform
-transition
-duration-500
-hover:scale-105">
-<img src=https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2016/cuba/Urlaub2016-326.jpg class="img w-full" alt="image from 2016: Cuba">
-<div class="absolute flex flex-col inset-0 items-center justify-center bg-black bg-opacity-25">
-<h3>
-<a href=# class="text-white text-3xl">
+<a href=# class="block relative overflow-hidden">
+<img src=https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2016/cuba/Urlaub2016-326.jpg class="w-full h-full transform transition duration-500 hover:scale-105" alt="image from 2016: Cuba">
+<div class="absolute
+flex flex-col
+inset-0
+items-center
+justify-center
+bg-black bg-opacity-25
+pointer-events-none">
+<h3 class="text-white text-3xl p-5 text-center">
 2016: Cuba
-</a>
 </h3>
 </div>
-</div>
-</article>
+</a>
 </div>
 <div>
-<article>
-<div class="relative
-overflow-hidden
-img
-h-full
-w-full
-transform
-transition
-duration-500
-hover:scale-105">
-<img src=https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2014/new-zealand/DSC_1044.jpg class="img w-full" alt="image from 2014: New Zealand">
-<div class="absolute flex flex-col inset-0 items-center justify-center bg-black bg-opacity-25">
-<h3>
-<a href=# class="text-white text-3xl">
+<a href=# class="block relative overflow-hidden">
+<img src=https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2014/new-zealand/DSC_1044.jpg class="w-full h-full transform transition duration-500 hover:scale-105" alt="image from 2014: New Zealand">
+<div class="absolute
+flex flex-col
+inset-0
+items-center
+justify-center
+bg-black bg-opacity-25
+pointer-events-none">
+<h3 class="text-white text-3xl p-5 text-center">
 2014: New Zealand
-</a>
 </h3>
 </div>
-</div>
-</article>
+</a>
 </div>
 <div>
-<article>
-<div class="relative
-overflow-hidden
-img
-h-full
-w-full
-transform
-transition
-duration-500
-hover:scale-105">
-<img src=https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2013/australia/Poster009.jpg class="img w-full" alt="image from 2013: Australia">
-<div class="absolute flex flex-col inset-0 items-center justify-center bg-black bg-opacity-25">
-<h3>
-<a href=# class="text-white text-3xl">
+<a href=# class="block relative overflow-hidden">
+<img src=https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2013/australia/Poster009.jpg class="w-full h-full transform transition duration-500 hover:scale-105" alt="image from 2013: Australia">
+<div class="absolute
+flex flex-col
+inset-0
+items-center
+justify-center
+bg-black bg-opacity-25
+pointer-events-none">
+<h3 class="text-white text-3xl p-5 text-center">
 2013: Australia
-</a>
 </h3>
 </div>
-</div>
-</article>
+</a>
 </div>
 </div>
 </main><footer class="bottom-0 w-full p-4 text-xs text-center text-gray-400 border-t border-gray-200">
