--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta name=viewport content="width=device-width,initial-scale=1">
 <title>Travel broadens the mind. - Olli On Tour</title>
 <meta name=description content="Test description">
-<meta name=generator content="Hugo 0.88.1"><link rel=stylesheet href="https://occb.dev/css/styles.min.1c7a80b3676fc0273e92c3d44dfa71f55979a62a072fec0bd9367afee51677fb.css" integrity="sha256-HHqAs2dvwCc+ksPUTfpx9Vl5pioHL+wL2TZ6/uUWd/s=">
+<meta name=generator content="Hugo 0.88.1"><link rel=stylesheet href="https://occb.dev/css/styles.min.a6dd9a99e74271d3a069e65414de88676cf9565bbba8a028b0dbda0abbed211a.css" integrity="sha256-pt2amedCcdOgaeZUFN6IZ2z5Vlu7qKAosNvaCrvtIRo=">
 <link rel=apple-touch-icon sizes=76x76 href=/favicon/apple-touch-icon.png>
 <link rel=icon type=image/png sizes=32x32 href=/favicon/favicon-32x32.png>
 <link rel=icon type=image/png sizes=16x16 href=/favicon/favicon-16x16.png>
@@ -41,7 +41,7 @@ Olli On Tour
 </article>
 <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
 <div>
-<a href=# class="block relative overflow-hidden">
+<a href=/post/2019-10-10-canary-islands/ class="block relative overflow-hidden">
 <img src=https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2019/canary_islands/Kanaren-21.jpg class="w-full h-full transform transition duration-500 hover:scale-105" alt="image from 2019: Canary Islands">
 <div class="absolute
 flex flex-col
@@ -57,7 +57,7 @@ pointer-events-none">
 </a>
 </div>
 <div>
-<a href=# class="block relative overflow-hidden">
+<a href=/post/2018-11-23-dubai/ class="block relative overflow-hidden">
 <img src=https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2018/dubai/Dubai-017.jpg class="w-full h-full transform transition duration-500 hover:scale-105" alt="image from 2018: Dubai">
 <div class="absolute
 flex flex-col
@@ -73,7 +73,7 @@ pointer-events-none">
 </a>
 </div>
 <div>
-<a href=# class="block relative overflow-hidden">
+<a href=/post/2018-06-20-ireland/ class="block relative overflow-hidden">
 <img src=https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2018/ireland/Irland-048.jpg class="w-full h-full transform transition duration-500 hover:scale-105" alt="image from 2018: Ireland">
 <div class="absolute
 flex flex-col
@@ -89,7 +89,7 @@ pointer-events-none">
 </a>
 </div>
 <div>
-<a href=# class="block relative overflow-hidden">
+<a href=/post/2018-11-23-japan/ class="block relative overflow-hidden">
 <img src=https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2018/japan/Japan-132.jpg class="w-full h-full transform transition duration-500 hover:scale-105" alt="image from 2018: Japan">
 <div class="absolute
 flex flex-col
@@ -105,7 +105,7 @@ pointer-events-none">
 </a>
 </div>
 <div>
-<a href=# class="block relative overflow-hidden">
+<a href=/post/2017-11-20-sweden/ class="block relative overflow-hidden">
 <img src=https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2017/sweden/Schweden-079.jpg class="w-full h-full transform transition duration-500 hover:scale-105" alt="image from 2017: Sweden">
 <div class="absolute
 flex flex-col
@@ -121,7 +121,7 @@ pointer-events-none">
 </a>
 </div>
 <div>
-<a href=# class="block relative overflow-hidden">
+<a href=/post/2016-08-03-iceland/ class="block relative overflow-hidden">
 <img src=https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2016/iceland/Island-116.jpg class="w-full h-full transform transition duration-500 hover:scale-105" alt="image from 2016: Iceland">
 <div class="absolute
 flex flex-col
@@ -137,7 +137,7 @@ pointer-events-none">
 </a>
 </div>
 <div>
-<a href=# class="block relative overflow-hidden">
+<a href=/post/2016-05-20-guatemala-belice-mexico/ class="block relative overflow-hidden">
 <img src=https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2016/guatemala-belize-mexico/Urlaub2016-059.jpg class="w-full h-full transform transition duration-500 hover:scale-105" alt="image from 2016: Guatemala, Belice, Mexico">
 <div class="absolute
 flex flex-col
@@ -153,7 +153,7 @@ pointer-events-none">
 </a>
 </div>
 <div>
-<a href=# class="block relative overflow-hidden">
+<a href=/post/2016-05-20-cuba/ class="block relative overflow-hidden">
 <img src=https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2016/cuba/Urlaub2016-326.jpg class="w-full h-full transform transition duration-500 hover:scale-105" alt="image from 2016: Cuba">
 <div class="absolute
 flex flex-col
@@ -169,7 +169,7 @@ pointer-events-none">
 </a>
 </div>
 <div>
-<a href=# class="block relative overflow-hidden">
+<a href=/post/2014-12-25-new-zealand/ class="block relative overflow-hidden">
 <img src=https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2014/new-zealand/DSC_1044.jpg class="w-full h-full transform transition duration-500 hover:scale-105" alt="image from 2014: New Zealand">
 <div class="absolute
 flex flex-col
@@ -185,7 +185,7 @@ pointer-events-none">
 </a>
 </div>
 <div>
-<a href=# class="block relative overflow-hidden">
+<a href=/post/2013-11-03-australia/ class="block relative overflow-hidden">
 <img src=https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2013/australia/Poster009.jpg class="w-full h-full transform transition duration-500 hover:scale-105" alt="image from 2013: Australia">
 <div class="absolute
 flex flex-col
