--- a/about/index.html
+++ b/about/index.html
@@ -5,7 +5,7 @@
 <title>About - Olli On Tour</title>
 <meta name=description content="A short description about this website.">
 <meta name=author content="Olli">
-<meta name=generator content="Hugo 0.88.1"><link rel=stylesheet href="https://occb.dev/css/styles.min.1c7a80b3676fc0273e92c3d44dfa71f55979a62a072fec0bd9367afee51677fb.css" integrity="sha256-HHqAs2dvwCc+ksPUTfpx9Vl5pioHL+wL2TZ6/uUWd/s=">
+<meta name=generator content="Hugo 0.88.1"><link rel=stylesheet href="https://occb.dev/css/styles.min.a6dd9a99e74271d3a069e65414de88676cf9565bbba8a028b0dbda0abbed211a.css" integrity="sha256-pt2amedCcdOgaeZUFN6IZ2z5Vlu7qKAosNvaCrvtIRo=">
 <link rel=apple-touch-icon sizes=76x76 href=/favicon/apple-touch-icon.png>
 <link rel=icon type=image/png sizes=32x32 href=/favicon/favicon-32x32.png>
 <link rel=icon type=image/png sizes=16x16 href=/favicon/favicon-16x16.png>
@@ -39,6 +39,8 @@ Olli On Tour
 </header><main class="flex-1 mx-4 md:mx-12 lg:mx-24 mt-4 sm:mt-16">
 <article class="px-6 mx-auto mb-16 prose text-gray-700 justify-self-center sm:px-4 md:px-0 lg:prose-lg">
 <h1>About</h1>
+<div class="flex flex-row overflow-y-hidden overflow-x-auto w-full justify-start md:justify-center items-center space-x-4 text-ne-on-surface text-sm font-bold divide-x-2 divide-ne-on-surface-lighter">
+</div>
 <p>Hi, I&rsquo;m Oliver!</p>
 <p>This will be my little playground of a website, without regular updates. For now, just static code, no cookies, nothing to buy, no adverts.</p>
 <h2 id=licence>Licence</h2>
@@ -46,6 +48,8 @@ Olli On Tour
 <p><em>Avatar icon</em> taken from <a href=https://www.savagechickens.com/2007/03/savage-chickens-icons.html>www.savagechickens.com</a> with stated <a href=https://www.savagechickens.com/rates>authorization</a> by the author (see paragraph &lsquo;Permission & Payment for Web Use&rsquo;).</p>
 <h3 id=travel-pictures>Travel pictures</h3>
 <p xmlns:cc=http://creativecommons.org/ns# xmlns:dct=http://purl.org/dc/terms/><a property="dct:title" rel=cc:attributionurl href=https://www.occb.dev/>All Photos on this site</a> (except mentioned avatar picture) by <a rel="cc:attributionurl dct:creator" property="cc:attributionName" href=https://www.occb.dev/>Oliver Becker</a> are licensed under <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/?ref=chooser-v1" target=_blank rel="license noopener noreferrer" style=display:inline-block>CC BY-NC-SA 4.0<img style=height:22px!important;margin-left:3px;vertical-align:text-bottom src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img style=height:22px!important;margin-left:3px;vertical-align:text-bottom src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"><img style=height:22px!important;margin-left:3px;vertical-align:text-bottom src="https://mirrors.creativecommons.org/presskit/icons/nc.svg?ref=chooser-v1"><img style=height:22px!important;margin-left:3px;vertical-align:text-bottom src="https://mirrors.creativecommons.org/presskit/icons/sa.svg?ref=chooser-v1"></a></p>
+<h3 id=icons>Icons</h3>
+<p><a href=https://heroicons.com/>https://heroicons.com/</a> under <a href=https://github.com/tailwindlabs/heroicons#license>MIT-License</a></p>
 </article>
 </main><footer class="bottom-0 w-full p-4 text-xs text-center text-gray-400 border-t border-gray-200">
 <p>2020-2021
