--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta name=viewport content="width=device-width,initial-scale=1">
 <title>Travel broadens the mind. - Olli On Tour</title>
 <meta name=description content="Test description">
-<meta name=generator content="Hugo 0.88.1"><link rel=stylesheet href="https://occb.dev/css/styles.min.a6dd9a99e74271d3a069e65414de88676cf9565bbba8a028b0dbda0abbed211a.css" integrity="sha256-pt2amedCcdOgaeZUFN6IZ2z5Vlu7qKAosNvaCrvtIRo=">
+<meta name=generator content="Hugo 0.88.1"><link rel=stylesheet href="https://occb.dev/css/styles.min.ef5e4a5432cd5d382f9604acdea36e4aae5021971809c78996980414ad878ecb.css" integrity="sha256-715KVDLNXTgvlgSs3qNuSq5QIZcYCceJlpgEFK2Hjss=">
 <link rel=apple-touch-icon sizes=76x76 href=/favicon/apple-touch-icon.png>
 <link rel=icon type=image/png sizes=32x32 href=/favicon/favicon-32x32.png>
 <link rel=icon type=image/png sizes=16x16 href=/favicon/favicon-16x16.png>
@@ -137,8 +137,8 @@ pointer-events-none">
 </a>
 </div>
 <div>
-<a href=/post/2016-05-20-guatemala-belice-mexico/ class="block relative overflow-hidden">
-<img src=https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2016/guatemala-belize-mexico/Urlaub2016-059.jpg class="w-full h-full transform transition duration-500 hover:scale-105" alt="image from 2016: Guatemala, Belice, Mexico">
+<a href=/post/2016-05-20-guatemala-belize-mexico/ class="block relative overflow-hidden">
+<img src=https://res.cloudinary.com/occbdev/image/upload/t_occbdev_gallery_teaser/images/travel/2016/guatemala-belize-mexico/Urlaub2016-059.jpg class="w-full h-full transform transition duration-500 hover:scale-105" alt="image from 2016: Guatemala, Belize, Mexico">
 <div class="absolute
 flex flex-col
 inset-0
@@ -147,7 +147,7 @@ justify-center
 bg-black bg-opacity-25
 pointer-events-none">
 <h3 class="text-white text-3xl p-5 text-center">
-2016: Guatemala, Belice, Mexico
+2016: Guatemala, Belize, Mexico
 </h3>
 </div>
 </a>
