deploy: 6942d3eb4461d68d95000c2dbb19cadbfd465f54

--- a/about/index.html
+++ b/about/index.html
@@ -5,7 +5,8 @@
 <title>About - Olli On Tour</title>
 <meta name=description content="A short description about this website.">
 <meta name=author content="Olli">
-<meta name=generator content="Hugo 0.89.1"><link rel=stylesheet href="https://occb.dev/css/styles.min.6add3bf8d3eddaf17faa0ccd16ba53804217eb94c78e59ba517d99d7fcdca6ec.css" integrity="sha256-at07+NPt2vF/qgzNFrpTgEIX65THjlm6UX2Z1/zcpuw=">
+<meta name=generator content="Hugo 0.89.1"><link rel=stylesheet href="https://occb.dev/css/styles.min.ef5e4a5432cd5d382f9604acdea36e4aae5021971809c78996980414ad878ecb.css" integrity="sha256-715KVDLNXTgvlgSs3qNuSq5QIZcYCceJlpgEFK2Hjss=">
+<link rel=stylesheet href=/css/glightbox.min.css>
 <link rel=apple-touch-icon sizes=76x76 href=/favicon/apple-touch-icon.png>
 <link rel=icon type=image/png sizes=32x32 href=/favicon/favicon-32x32.png>
 <link rel=icon type=image/png sizes=16x16 href=/favicon/favicon-16x16.png>
