deploy: 01ac972d5e8b8dbdc77546bc06ede2cab25a12e4

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <head>
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
-<title>Travel broadens the mind. - Olli On Tour</title>
-<meta name=description content="Test description">
+<title>“One must travel to learn.” – Mark Twain - Olli On Tour</title>
+<meta name=description content="Travel index page">
 <meta name=generator content="Hugo 0.89.1"><link rel=stylesheet href="https://occb.dev/css/styles.min.ef5e4a5432cd5d382f9604acdea36e4aae5021971809c78996980414ad878ecb.css" integrity="sha256-715KVDLNXTgvlgSs3qNuSq5QIZcYCceJlpgEFK2Hjss=">
 <link rel=stylesheet href=/css/glightbox.min.css>
 <link rel=apple-touch-icon sizes=76x76 href=/favicon/apple-touch-icon.png>
@@ -38,7 +38,7 @@ Olli On Tour
 </nav>
 </header><main class="flex-1 mx-4 md:mx-12 lg:mx-24 mt-4 sm:mt-16">
 <article class="text-center text-gray-700">
-<h2 class="font-serif font-extralight text-5xl text-gray-500 mb-8">Travel broadens the mind.</h2>
+<h2 class="font-serif font-extralight text-5xl text-gray-500 mb-8">“One must travel to learn.” – Mark Twain</h2>
 </article>
 <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
 <div>
